--- a/1-FFNN-for-iris-example.ipynb
+++ b/1-FFNN-for-iris-example.ipynb
@@ -22,13 +22,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "df2b3d7f-1bc1-4f1b-af8c-cb8388fba006",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5058b63a-14ab-4391-b61f-958e11e3fbe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2 0. ]\n",
+      " [4.9 3.  1.4 0.2 0. ]\n",
+      " [4.7 3.2 1.3 0.2 0. ]\n",
+      " [4.6 3.1 1.5 0.2 0. ]\n",
+      " [5.  3.6 1.4 0.2 0. ]\n",
+      " [5.4 3.9 1.7 0.4 0. ]\n",
+      " [4.6 3.4 1.4 0.3 0. ]\n",
+      " [5.  3.4 1.5 0.2 0. ]\n",
+      " [4.4 2.9 1.4 0.2 0. ]\n",
+      " [4.9 3.1 1.5 0.1 0. ]\n",
+      " [5.4 3.7 1.5 0.2 0. ]\n",
+      " [4.8 3.4 1.6 0.2 0. ]\n",
+      " [4.8 3.  1.4 0.1 0. ]\n",
+      " [4.3 3.  1.1 0.1 0. ]\n",
+      " [5.8 4.  1.2 0.2 0. ]\n",
+      " [5.7 4.4 1.5 0.4 0. ]\n",
+      " [5.4 3.9 1.3 0.4 0. ]\n",
+      " [5.1 3.5 1.4 0.3 0. ]\n",
+      " [5.7 3.8 1.7 0.3 0. ]\n",
+      " [5.1 3.8 1.5 0.3 0. ]\n",
+      " [5.4 3.4 1.7 0.2 0. ]\n",
+      " [5.1 3.7 1.5 0.4 0. ]\n",
+      " [4.6 3.6 1.  0.2 0. ]\n",
+      " [5.1 3.3 1.7 0.5 0. ]\n",
+      " [4.8 3.4 1.9 0.2 0. ]\n",
+      " [5.  3.  1.6 0.2 0. ]\n",
+      " [5.  3.4 1.6 0.4 0. ]\n",
+      " [5.2 3.5 1.5 0.2 0. ]\n",
+      " [5.2 3.4 1.4 0.2 0. ]\n",
+      " [4.7 3.2 1.6 0.2 0. ]\n",
+      " [4.8 3.1 1.6 0.2 0. ]\n",
+      " [5.4 3.4 1.5 0.4 0. ]\n",
+      " [5.2 4.1 1.5 0.1 0. ]\n",
+      " [5.5 4.2 1.4 0.2 0. ]\n",
+      " [4.9 3.1 1.5 0.1 0. ]\n",
+      " [5.  3.2 1.2 0.2 0. ]\n",
+      " [5.5 3.5 1.3 0.2 0. ]\n",
+      " [4.9 3.1 1.5 0.1 0. ]\n",
+      " [4.4 3.  1.3 0.2 0. ]\n",
+      " [5.1 3.4 1.5 0.2 0. ]\n",
+      " [5.  3.5 1.3 0.3 0. ]\n",
+      " [4.5 2.3 1.3 0.3 0. ]\n",
+      " [4.4 3.2 1.3 0.2 0. ]\n",
+      " [5.  3.5 1.6 0.6 0. ]\n",
+      " [5.1 3.8 1.9 0.4 0. ]\n",
+      " [4.8 3.  1.4 0.3 0. ]\n",
+      " [5.1 3.8 1.6 0.2 0. ]\n",
+      " [4.6 3.2 1.4 0.2 0. ]\n",
+      " [5.3 3.7 1.5 0.2 0. ]\n",
+      " [5.  3.3 1.4 0.2 0. ]\n",
+      " [7.  3.2 4.7 1.4 1. ]\n",
+      " [6.4 3.2 4.5 1.5 1. ]\n",
+      " [6.9 3.1 4.9 1.5 1. ]\n",
+      " [5.5 2.3 4.  1.3 1. ]\n",
+      " [6.5 2.8 4.6 1.5 1. ]\n",
+      " [5.7 2.8 4.5 1.3 1. ]\n",
+      " [6.3 3.3 4.7 1.6 1. ]\n",
+      " [4.9 2.4 3.3 1.  1. ]\n",
+      " [6.6 2.9 4.6 1.3 1. ]\n",
+      " [5.2 2.7 3.9 1.4 1. ]\n",
+      " [5.  2.  3.5 1.  1. ]\n",
+      " [5.9 3.  4.2 1.5 1. ]\n",
+      " [6.  2.2 4.  1.  1. ]\n",
+      " [6.1 2.9 4.7 1.4 1. ]\n",
+      " [5.6 2.9 3.6 1.3 1. ]\n",
+      " [6.7 3.1 4.4 1.4 1. ]\n",
+      " [5.6 3.  4.5 1.5 1. ]\n",
+      " [5.8 2.7 4.1 1.  1. ]\n",
+      " [6.2 2.2 4.5 1.5 1. ]\n",
+      " [5.6 2.5 3.9 1.1 1. ]\n",
+      " [5.9 3.2 4.8 1.8 1. ]\n",
+      " [6.1 2.8 4.  1.3 1. ]\n",
+      " [6.3 2.5 4.9 1.5 1. ]\n",
+      " [6.1 2.8 4.7 1.2 1. ]\n",
+      " [6.4 2.9 4.3 1.3 1. ]\n",
+      " [6.6 3.  4.4 1.4 1. ]\n",
+      " [6.8 2.8 4.8 1.4 1. ]\n",
+      " [6.7 3.  5.  1.7 1. ]\n",
+      " [6.  2.9 4.5 1.5 1. ]\n",
+      " [5.7 2.6 3.5 1.  1. ]\n",
+      " [5.5 2.4 3.8 1.1 1. ]\n",
+      " [5.5 2.4 3.7 1.  1. ]\n",
+      " [5.8 2.7 3.9 1.2 1. ]\n",
+      " [6.  2.7 5.1 1.6 1. ]\n",
+      " [5.4 3.  4.5 1.5 1. ]\n",
+      " [6.  3.4 4.5 1.6 1. ]\n",
+      " [6.7 3.1 4.7 1.5 1. ]\n",
+      " [6.3 2.3 4.4 1.3 1. ]\n",
+      " [5.6 3.  4.1 1.3 1. ]\n",
+      " [5.5 2.5 4.  1.3 1. ]\n",
+      " [5.5 2.6 4.4 1.2 1. ]\n",
+      " [6.1 3.  4.6 1.4 1. ]\n",
+      " [5.8 2.6 4.  1.2 1. ]\n",
+      " [5.  2.3 3.3 1.  1. ]\n",
+      " [5.6 2.7 4.2 1.3 1. ]\n",
+      " [5.7 3.  4.2 1.2 1. ]\n",
+      " [5.7 2.9 4.2 1.3 1. ]\n",
+      " [6.2 2.9 4.3 1.3 1. ]\n",
+      " [5.1 2.5 3.  1.1 1. ]\n",
+      " [5.7 2.8 4.1 1.3 1. ]\n",
+      " [6.3 3.3 6.  2.5 2. ]\n",
+      " [5.8 2.7 5.1 1.9 2. ]\n",
+      " [7.1 3.  5.9 2.1 2. ]\n",
+      " [6.3 2.9 5.6 1.8 2. ]\n",
+      " [6.5 3.  5.8 2.2 2. ]\n",
+      " [7.6 3.  6.6 2.1 2. ]\n",
+      " [4.9 2.5 4.5 1.7 2. ]\n",
+      " [7.3 2.9 6.3 1.8 2. ]\n",
+      " [6.7 2.5 5.8 1.8 2. ]\n",
+      " [7.2 3.6 6.1 2.5 2. ]\n",
+      " [6.5 3.2 5.1 2.  2. ]\n",
+      " [6.4 2.7 5.3 1.9 2. ]\n",
+      " [6.8 3.  5.5 2.1 2. ]\n",
+      " [5.7 2.5 5.  2.  2. ]\n",
+      " [5.8 2.8 5.1 2.4 2. ]\n",
+      " [6.4 3.2 5.3 2.3 2. ]\n",
+      " [6.5 3.  5.5 1.8 2. ]\n",
+      " [7.7 3.8 6.7 2.2 2. ]\n",
+      " [7.7 2.6 6.9 2.3 2. ]\n",
+      " [6.  2.2 5.  1.5 2. ]\n",
+      " [6.9 3.2 5.7 2.3 2. ]\n",
+      " [5.6 2.8 4.9 2.  2. ]\n",
+      " [7.7 2.8 6.7 2.  2. ]\n",
+      " [6.3 2.7 4.9 1.8 2. ]\n",
+      " [6.7 3.3 5.7 2.1 2. ]\n",
+      " [7.2 3.2 6.  1.8 2. ]\n",
+      " [6.2 2.8 4.8 1.8 2. ]\n",
+      " [6.1 3.  4.9 1.8 2. ]\n",
+      " [6.4 2.8 5.6 2.1 2. ]\n",
+      " [7.2 3.  5.8 1.6 2. ]\n",
+      " [7.4 2.8 6.1 1.9 2. ]\n",
+      " [7.9 3.8 6.4 2.  2. ]\n",
+      " [6.4 2.8 5.6 2.2 2. ]\n",
+      " [6.3 2.8 5.1 1.5 2. ]\n",
+      " [6.1 2.6 5.6 1.4 2. ]\n",
+      " [7.7 3.  6.1 2.3 2. ]\n",
+      " [6.3 3.4 5.6 2.4 2. ]\n",
+      " [6.4 3.1 5.5 1.8 2. ]\n",
+      " [6.  3.  4.8 1.8 2. ]\n",
+      " [6.9 3.1 5.4 2.1 2. ]\n",
+      " [6.7 3.1 5.6 2.4 2. ]\n",
+      " [6.9 3.1 5.1 2.3 2. ]\n",
+      " [5.8 2.7 5.1 1.9 2. ]\n",
+      " [6.8 3.2 5.9 2.3 2. ]\n",
+      " [6.7 3.3 5.7 2.5 2. ]\n",
+      " [6.7 3.  5.2 2.3 2. ]\n",
+      " [6.3 2.5 5.  1.9 2. ]\n",
+      " [6.5 3.  5.2 2.  2. ]\n",
+      " [6.2 3.4 5.4 2.3 2. ]\n",
+      " [5.9 3.  5.1 1.8 2. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9c0a5ce0-342d-413d-87aa-f895d4618077",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print"
+    "data = dataset[:,0:4]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9720b934-4033-44aa-84fd-7e0644a4b1c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.4 3.7 1.5 0.2]\n",
+      " [4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.  1.4 0.1]\n",
+      " [4.3 3.  1.1 0.1]\n",
+      " [5.8 4.  1.2 0.2]\n",
+      " [5.7 4.4 1.5 0.4]\n",
+      " [5.4 3.9 1.3 0.4]\n",
+      " [5.1 3.5 1.4 0.3]\n",
+      " [5.7 3.8 1.7 0.3]\n",
+      " [5.1 3.8 1.5 0.3]\n",
+      " [5.4 3.4 1.7 0.2]\n",
+      " [5.1 3.7 1.5 0.4]\n",
+      " [4.6 3.6 1.  0.2]\n",
+      " [5.1 3.3 1.7 0.5]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [5.  3.  1.6 0.2]\n",
+      " [5.  3.4 1.6 0.4]\n",
+      " [5.2 3.5 1.5 0.2]\n",
+      " [5.2 3.4 1.4 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.2 4.1 1.5 0.1]\n",
+      " [5.5 4.2 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.  3.2 1.2 0.2]\n",
+      " [5.5 3.5 1.3 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [4.4 3.  1.3 0.2]\n",
+      " [5.1 3.4 1.5 0.2]\n",
+      " [5.  3.5 1.3 0.3]\n",
+      " [4.5 2.3 1.3 0.3]\n",
+      " [4.4 3.2 1.3 0.2]\n",
+      " [5.  3.5 1.6 0.6]\n",
+      " [5.1 3.8 1.9 0.4]\n",
+      " [4.8 3.  1.4 0.3]\n",
+      " [5.1 3.8 1.6 0.2]\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]\n",
+      " [7.  3.2 4.7 1.4]\n",
+      " [6.4 3.2 4.5 1.5]\n",
+      " [6.9 3.1 4.9 1.5]\n",
+      " [5.5 2.3 4.  1.3]\n",
+      " [6.5 2.8 4.6 1.5]\n",
+      " [5.7 2.8 4.5 1.3]\n",
+      " [6.3 3.3 4.7 1.6]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [6.6 2.9 4.6 1.3]\n",
+      " [5.2 2.7 3.9 1.4]\n",
+      " [5.  2.  3.5 1. ]\n",
+      " [5.9 3.  4.2 1.5]\n",
+      " [6.  2.2 4.  1. ]\n",
+      " [6.1 2.9 4.7 1.4]\n",
+      " [5.6 2.9 3.6 1.3]\n",
+      " [6.7 3.1 4.4 1.4]\n",
+      " [5.6 3.  4.5 1.5]\n",
+      " [5.8 2.7 4.1 1. ]\n",
+      " [6.2 2.2 4.5 1.5]\n",
+      " [5.6 2.5 3.9 1.1]\n",
+      " [5.9 3.2 4.8 1.8]\n",
+      " [6.1 2.8 4.  1.3]\n",
+      " [6.3 2.5 4.9 1.5]\n",
+      " [6.1 2.8 4.7 1.2]\n",
+      " [6.4 2.9 4.3 1.3]\n",
+      " [6.6 3.  4.4 1.4]\n",
+      " [6.8 2.8 4.8 1.4]\n",
+      " [6.7 3.  5.  1.7]\n",
+      " [6.  2.9 4.5 1.5]\n",
+      " [5.7 2.6 3.5 1. ]\n",
+      " [5.5 2.4 3.8 1.1]\n",
+      " [5.5 2.4 3.7 1. ]\n",
+      " [5.8 2.7 3.9 1.2]\n",
+      " [6.  2.7 5.1 1.6]\n",
+      " [5.4 3.  4.5 1.5]\n",
+      " [6.  3.4 4.5 1.6]\n",
+      " [6.7 3.1 4.7 1.5]\n",
+      " [6.3 2.3 4.4 1.3]\n",
+      " [5.6 3.  4.1 1.3]\n",
+      " [5.5 2.5 4.  1.3]\n",
+      " [5.5 2.6 4.4 1.2]\n",
+      " [6.1 3.  4.6 1.4]\n",
+      " [5.8 2.6 4.  1.2]\n",
+      " [5.  2.3 3.3 1. ]\n",
+      " [5.6 2.7 4.2 1.3]\n",
+      " [5.7 3.  4.2 1.2]\n",
+      " [5.7 2.9 4.2 1.3]\n",
+      " [6.2 2.9 4.3 1.3]\n",
+      " [5.1 2.5 3.  1.1]\n",
+      " [5.7 2.8 4.1 1.3]\n",
+      " [6.3 3.3 6.  2.5]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [7.1 3.  5.9 2.1]\n",
+      " [6.3 2.9 5.6 1.8]\n",
+      " [6.5 3.  5.8 2.2]\n",
+      " [7.6 3.  6.6 2.1]\n",
+      " [4.9 2.5 4.5 1.7]\n",
+      " [7.3 2.9 6.3 1.8]\n",
+      " [6.7 2.5 5.8 1.8]\n",
+      " [7.2 3.6 6.1 2.5]\n",
+      " [6.5 3.2 5.1 2. ]\n",
+      " [6.4 2.7 5.3 1.9]\n",
+      " [6.8 3.  5.5 2.1]\n",
+      " [5.7 2.5 5.  2. ]\n",
+      " [5.8 2.8 5.1 2.4]\n",
+      " [6.4 3.2 5.3 2.3]\n",
+      " [6.5 3.  5.5 1.8]\n",
+      " [7.7 3.8 6.7 2.2]\n",
+      " [7.7 2.6 6.9 2.3]\n",
+      " [6.  2.2 5.  1.5]\n",
+      " [6.9 3.2 5.7 2.3]\n",
+      " [5.6 2.8 4.9 2. ]\n",
+      " [7.7 2.8 6.7 2. ]\n",
+      " [6.3 2.7 4.9 1.8]\n",
+      " [6.7 3.3 5.7 2.1]\n",
+      " [7.2 3.2 6.  1.8]\n",
+      " [6.2 2.8 4.8 1.8]\n",
+      " [6.1 3.  4.9 1.8]\n",
+      " [6.4 2.8 5.6 2.1]\n",
+      " [7.2 3.  5.8 1.6]\n",
+      " [7.4 2.8 6.1 1.9]\n",
+      " [7.9 3.8 6.4 2. ]\n",
+      " [6.4 2.8 5.6 2.2]\n",
+      " [6.3 2.8 5.1 1.5]\n",
+      " [6.1 2.6 5.6 1.4]\n",
+      " [7.7 3.  6.1 2.3]\n",
+      " [6.3 3.4 5.6 2.4]\n",
+      " [6.4 3.1 5.5 1.8]\n",
+      " [6.  3.  4.8 1.8]\n",
+      " [6.9 3.1 5.4 2.1]\n",
+      " [6.7 3.1 5.6 2.4]\n",
+      " [6.9 3.1 5.1 2.3]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [6.8 3.2 5.9 2.3]\n",
+      " [6.7 3.3 5.7 2.5]\n",
+      " [6.7 3.  5.2 2.3]\n",
+      " [6.3 2.5 5.  1.9]\n",
+      " [6.5 3.  5.2 2. ]\n",
+      " [6.2 3.4 5.4 2.3]\n",
+      " [5.9 3.  5.1 1.8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "73e6cff9-4f33-47bd-b2ab-b14430f66364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = dataset[:,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f4d23465-953e-47a2-8e70-6973318c97b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2.\n",
+      " 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2. 2.\n",
+      " 2. 2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7326c15d-b28e-4ee9-aeec-32f28fbccc5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
