--- a/1-FFNN-for-iris-example.ipynb
+++ b/1-FFNN-for-iris-example.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9c0a5ce0-342d-413d-87aa-f895d4618077",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9720b934-4033-44aa-84fd-7e0644a4b1c1",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "73e6cff9-4f33-47bd-b2ab-b14430f66364",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f4d23465-953e-47a2-8e70-6973318c97b6",
    "metadata": {},
    "outputs": [
@@ -418,8 +418,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7326c15d-b28e-4ee9-aeec-32f28fbccc5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d739b74-3b83-42e3-be0f-52b9a77566df",
    "metadata": {},
    "outputs": [],
    "source": []
